--- a/app/src/main/res/layout/fragment_motors.xml
+++ b/app/src/main/res/layout/fragment_motors.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="0.00"
+        android:text="@string/motors_default_zero_position_placeholder"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/z_positive_01" />
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="E:"
+        android:text="@string/motors_e_label"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="@string/negative_100"
+        android:text="@string/motors_negative_100"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/z_label" />
 
@@ -47,7 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="@string/positive_01"
+        android:text="@string/motors_positive_01"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/z_negative_100" />
 
@@ -57,7 +57,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="Z:"
+        android:text="@string/motors_z_axis_label"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,7 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="0.00"
+        android:text="@string/motors_default_zero_position_placeholder"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/textView4"
         app:layout_constraintTop_toBottomOf="@+id/y_positive_01" />
@@ -80,7 +80,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="@string/negative_01"
+        android:text="@string/motors_negative_01"
         app:layout_constraintStart_toEndOf="@+id/y_negative_1"
         app:layout_constraintTop_toBottomOf="@+id/z_label" />
 
@@ -90,7 +90,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="@string/negative_1"
+        android:text="@string/motors_negative_1"
         app:layout_constraintStart_toEndOf="@+id/y_negative_10"
         app:layout_constraintTop_toBottomOf="@+id/z_label" />
 
@@ -100,7 +100,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="@string/negative_10"
+        android:text="@string/motors_negative_10"
         app:layout_constraintStart_toEndOf="@+id/y_negative_100"
         app:layout_constraintTop_toBottomOf="@+id/z_label" />
 
@@ -110,7 +110,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="@string/positive_10"
+        android:text="@string/motors_positive_10"
         app:layout_constraintStart_toEndOf="@+id/y_positive_1"
         app:layout_constraintTop_toBottomOf="@+id/y_negative_3" />
 
@@ -120,7 +120,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="@string/positive_1"
+        android:text="@string/motors_positive_1"
         app:layout_constraintStart_toEndOf="@+id/y_positive_01"
         app:layout_constraintTop_toBottomOf="@+id/z_negative_10" />
 
@@ -130,7 +130,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="@string/positive_100"
+        android:text="@string/motors_positive_100"
         app:layout_constraintStart_toEndOf="@+id/y_positive_10"
         app:layout_constraintTop_toBottomOf="@+id/z_negative_01" />
 
@@ -140,7 +140,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="@string/positive_01"
+        android:text="@string/motors_positive_01"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/y_negative_100" />
 
@@ -150,7 +150,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="@string/negative_100"
+        android:text="@string/motors_negative_100"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/y_label" />
 
@@ -160,7 +160,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="@string/positive_100"
+        android:text="@string/motors_positive_100"
         app:layout_constraintStart_toEndOf="@+id/y_positive_10"
         app:layout_constraintTop_toBottomOf="@+id/y_negative_01" />
 
@@ -170,7 +170,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="Y:"
+        android:text="@string/motors_y_axis_label"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -182,7 +182,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="0.00"
+        android:text="@string/motors_default_zero_position_placeholder"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/textView4"
         app:layout_constraintTop_toBottomOf="@+id/x_positive_.1" />
@@ -193,7 +193,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="@string/negative_01"
+        android:text="@string/motors_negative_01"
         app:layout_constraintStart_toEndOf="@+id/y_negative_1"
         app:layout_constraintTop_toBottomOf="@+id/y_label" />
 
@@ -203,7 +203,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="@string/negative_1"
+        android:text="@string/motors_negative_1"
         app:layout_constraintStart_toEndOf="@+id/y_negative_10"
         app:layout_constraintTop_toBottomOf="@+id/y_label" />
 
@@ -213,7 +213,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="@string/negative_10"
+        android:text="@string/motors_negative_10"
         app:layout_constraintStart_toEndOf="@+id/y_negative_100"
         app:layout_constraintTop_toBottomOf="@+id/y_label" />
 
@@ -223,7 +223,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="@string/positive_10"
+        android:text="@string/motors_positive_10"
         app:layout_constraintStart_toEndOf="@+id/y_positive_1"
         app:layout_constraintTop_toBottomOf="@+id/y_negative_1" />
 
@@ -233,7 +233,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="@string/positive_1"
+        android:text="@string/motors_positive_1"
         app:layout_constraintStart_toEndOf="@+id/y_positive_01"
         app:layout_constraintTop_toBottomOf="@+id/y_negative_10" />
 
@@ -243,7 +243,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="@string/negative_100"
+        android:text="@string/motors_negative_100"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/x_label" />
 
@@ -253,7 +253,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="@string/positive_100"
+        android:text="@string/motors_positive_100"
         app:layout_constraintStart_toEndOf="@+id/x_positive_10"
         app:layout_constraintTop_toBottomOf="@+id/x_negative_01" />
 
@@ -263,7 +263,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="X:"
+        android:text="@string/motors_x_axis_label"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -275,7 +275,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="0.00"
+        android:text="@string/motors_default_zero_position_placeholder"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toTopOf="parent" />
@@ -286,7 +286,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="@string/negative_01"
+        android:text="@string/motors_negative_01"
         app:layout_constraintStart_toEndOf="@+id/x_negative_1"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -296,7 +296,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="@string/negative_1"
+        android:text="@string/motors_negative_1"
         app:layout_constraintStart_toEndOf="@+id/x_negative_10"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -306,7 +306,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="@string/negative_10"
+        android:text="@string/motors_negative_10"
         app:layout_constraintStart_toEndOf="@+id/x_negative_100"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -316,7 +316,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="@string/positive_10"
+        android:text="@string/motors_positive_10"
         app:layout_constraintStart_toEndOf="@+id/x_negative_4"
         app:layout_constraintTop_toBottomOf="@+id/x_negative_1" />
 
@@ -326,7 +326,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="@string/positive_1"
+        android:text="@string/motors_positive_1"
         app:layout_constraintStart_toEndOf="@+id/x_positive_.1"
         app:layout_constraintTop_toBottomOf="@+id/x_negative_1" />
 
@@ -336,7 +336,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="@string/positive_01"
+        android:text="@string/motors_positive_01"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/x_negative_10" />
 </androidx.constraintlayout.widget.ConstraintLayout>
