--- a/app/src/main/res/layout/fragment_motors.xml
+++ b/app/src/main/res/layout/fragment_motors.xml
@@ -12,10 +12,10 @@
         android:id="@+id/e_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/motors_start_margin"
+        android:layout_marginTop="@dimen/motors_top_margin"
         android:text="@string/motors_default_zero_position_placeholder"
-        android:textSize="24sp"
+        android:textSize="@dimen/motors_text_size"
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/z_positive_01" />
 
@@ -23,10 +23,10 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/motors_start_margin"
+        android:layout_marginTop="@dimen/motors_top_margin"
         android:text="@string/motors_e_label"
-        android:textSize="24sp"
+        android:textSize="@dimen/motors_text_size"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/z_positive_01" />
@@ -35,8 +35,8 @@
         android:id="@+id/z_negative_100"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/motors_start_margin"
+        android:layout_marginTop="@dimen/motors_top_margin"
         android:text="@string/motors_negative_100"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/z_label" />
@@ -45,8 +45,8 @@
         android:id="@+id/z_positive_01"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/motors_start_margin"
+        android:layout_marginTop="@dimen/motors_top_margin"
         android:text="@string/motors_positive_01"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/z_negative_100" />
@@ -55,10 +55,10 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/motors_start_margin"
+        android:layout_marginTop="@dimen/motors_top_margin"
         android:text="@string/motors_z_axis_label"
-        android:textSize="24sp"
+        android:textSize="@dimen/motors_text_size"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/y_positive_01" />
@@ -67,10 +67,10 @@
         android:id="@+id/z_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/motors_narrow_start_margin"
+        android:layout_marginTop="@dimen/motors_top_margin"
         android:text="@string/motors_default_zero_position_placeholder"
-        android:textSize="24sp"
+        android:textSize="@dimen/motors_text_size"
         app:layout_constraintStart_toEndOf="@+id/textView4"
         app:layout_constraintTop_toBottomOf="@+id/y_positive_01" />
 
@@ -78,8 +78,8 @@
         android:id="@+id/z_negative_01"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/motors_narrow_start_margin"
+        android:layout_marginTop="@dimen/motors_top_margin"
         android:text="@string/motors_negative_01"
         app:layout_constraintStart_toEndOf="@+id/y_negative_1"
         app:layout_constraintTop_toBottomOf="@+id/z_label" />
@@ -88,8 +88,8 @@
         android:id="@+id/y_negative_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/motors_narrow_start_margin"
+        android:layout_marginTop="@dimen/motors_top_margin"
         android:text="@string/motors_negative_1"
         app:layout_constraintStart_toEndOf="@+id/y_negative_10"
         app:layout_constraintTop_toBottomOf="@+id/z_label" />
@@ -98,8 +98,8 @@
         android:id="@+id/z_negative_10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/motors_narrow_start_margin"
+        android:layout_marginTop="@dimen/motors_top_margin"
         android:text="@string/motors_negative_10"
         app:layout_constraintStart_toEndOf="@+id/y_negative_100"
         app:layout_constraintTop_toBottomOf="@+id/z_label" />
@@ -108,8 +108,8 @@
         android:id="@+id/z_positive_10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/motors_narrow_start_margin"
+        android:layout_marginTop="@dimen/motors_top_margin"
         android:text="@string/motors_positive_10"
         app:layout_constraintStart_toEndOf="@+id/y_positive_1"
         app:layout_constraintTop_toBottomOf="@+id/y_negative_3" />
@@ -118,8 +118,8 @@
         android:id="@+id/z_positive_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/motors_narrow_start_margin"
+        android:layout_marginTop="@dimen/motors_top_margin"
         android:text="@string/motors_positive_1"
         app:layout_constraintStart_toEndOf="@+id/y_positive_01"
         app:layout_constraintTop_toBottomOf="@+id/z_negative_10" />
@@ -128,8 +128,8 @@
         android:id="@+id/z_positive_100"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/motors_narrow_start_margin"
+        android:layout_marginTop="@dimen/motors_top_margin"
         android:text="@string/motors_positive_100"
         app:layout_constraintStart_toEndOf="@+id/y_positive_10"
         app:layout_constraintTop_toBottomOf="@+id/z_negative_01" />
@@ -138,8 +138,8 @@
         android:id="@+id/y_positive_01"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/motors_start_margin"
+        android:layout_marginTop="@dimen/motors_top_margin"
         android:text="@string/motors_positive_01"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/y_negative_100" />
@@ -148,8 +148,8 @@
         android:id="@+id/y_negative_100"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/motors_start_margin"
+        android:layout_marginTop="@dimen/motors_top_margin"
         android:text="@string/motors_negative_100"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/y_label" />
@@ -158,8 +158,8 @@
         android:id="@+id/y_positive_100"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/motors_narrow_start_margin"
+        android:layout_marginTop="@dimen/motors_top_margin"
         android:text="@string/motors_positive_100"
         app:layout_constraintStart_toEndOf="@+id/y_positive_10"
         app:layout_constraintTop_toBottomOf="@+id/y_negative_01" />
@@ -168,10 +168,10 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/motors_start_margin"
+        android:layout_marginTop="@dimen/motors_top_margin"
         android:text="@string/motors_y_axis_label"
-        android:textSize="24sp"
+        android:textSize="@dimen/motors_text_size"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/x_positive_.1" />
@@ -180,10 +180,10 @@
         android:id="@+id/y_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/motors_narrow_start_margin"
+        android:layout_marginTop="@dimen/motors_top_margin"
         android:text="@string/motors_default_zero_position_placeholder"
-        android:textSize="24sp"
+        android:textSize="@dimen/motors_text_size"
         app:layout_constraintStart_toEndOf="@+id/textView4"
         app:layout_constraintTop_toBottomOf="@+id/x_positive_.1" />
 
@@ -191,8 +191,8 @@
         android:id="@+id/y_negative_01"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/motors_narrow_start_margin"
+        android:layout_marginTop="@dimen/motors_top_margin"
         android:text="@string/motors_negative_01"
         app:layout_constraintStart_toEndOf="@+id/y_negative_1"
         app:layout_constraintTop_toBottomOf="@+id/y_label" />
@@ -201,8 +201,8 @@
         android:id="@+id/y_negative_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/motors_narrow_start_margin"
+        android:layout_marginTop="@dimen/motors_top_margin"
         android:text="@string/motors_negative_1"
         app:layout_constraintStart_toEndOf="@+id/y_negative_10"
         app:layout_constraintTop_toBottomOf="@+id/y_label" />
@@ -211,8 +211,8 @@
         android:id="@+id/y_negative_10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/motors_narrow_start_margin"
+        android:layout_marginTop="@dimen/motors_top_margin"
         android:text="@string/motors_negative_10"
         app:layout_constraintStart_toEndOf="@+id/y_negative_100"
         app:layout_constraintTop_toBottomOf="@+id/y_label" />
@@ -221,8 +221,8 @@
         android:id="@+id/y_positive_10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/motors_narrow_start_margin"
+        android:layout_marginTop="@dimen/motors_top_margin"
         android:text="@string/motors_positive_10"
         app:layout_constraintStart_toEndOf="@+id/y_positive_1"
         app:layout_constraintTop_toBottomOf="@+id/y_negative_1" />
@@ -231,8 +231,8 @@
         android:id="@+id/y_positive_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/motors_narrow_start_margin"
+        android:layout_marginTop="@dimen/motors_top_margin"
         android:text="@string/motors_positive_1"
         app:layout_constraintStart_toEndOf="@+id/y_positive_01"
         app:layout_constraintTop_toBottomOf="@+id/y_negative_10" />
@@ -241,8 +241,8 @@
         android:id="@+id/x_negative_100"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/motors_start_margin"
+        android:layout_marginTop="@dimen/motors_top_margin"
         android:text="@string/motors_negative_100"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/x_label" />
@@ -251,8 +251,8 @@
         android:id="@+id/x_positive_100"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/motors_narrow_start_margin"
+        android:layout_marginTop="@dimen/motors_top_margin"
         android:text="@string/motors_positive_100"
         app:layout_constraintStart_toEndOf="@+id/x_positive_10"
         app:layout_constraintTop_toBottomOf="@+id/x_negative_01" />
@@ -261,10 +261,10 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/motors_start_margin"
+        android:layout_marginTop="@dimen/motors_top_margin"
         android:text="@string/motors_x_axis_label"
-        android:textSize="24sp"
+        android:textSize="@dimen/motors_text_size"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -273,10 +273,10 @@
         android:id="@+id/x_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/motors_narrow_start_margin"
+        android:layout_marginTop="@dimen/motors_top_margin"
         android:text="@string/motors_default_zero_position_placeholder"
-        android:textSize="24sp"
+        android:textSize="@dimen/motors_text_size"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -284,8 +284,8 @@
         android:id="@+id/x_negative_01"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/motors_narrow_start_margin"
+        android:layout_marginTop="@dimen/motors_top_margin"
         android:text="@string/motors_negative_01"
         app:layout_constraintStart_toEndOf="@+id/x_negative_1"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -294,8 +294,8 @@
         android:id="@+id/x_negative_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/motors_narrow_start_margin"
+        android:layout_marginTop="@dimen/motors_top_margin"
         android:text="@string/motors_negative_1"
         app:layout_constraintStart_toEndOf="@+id/x_negative_10"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -304,8 +304,8 @@
         android:id="@+id/x_negative_10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/motors_narrow_start_margin"
+        android:layout_marginTop="@dimen/motors_top_margin"
         android:text="@string/motors_negative_10"
         app:layout_constraintStart_toEndOf="@+id/x_negative_100"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -314,8 +314,8 @@
         android:id="@+id/x_positive_10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/motors_narrow_start_margin"
+        android:layout_marginTop="@dimen/motors_top_margin"
         android:text="@string/motors_positive_10"
         app:layout_constraintStart_toEndOf="@+id/x_negative_4"
         app:layout_constraintTop_toBottomOf="@+id/x_negative_1" />
@@ -324,8 +324,8 @@
         android:id="@+id/x_negative_4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/motors_narrow_start_margin"
+        android:layout_marginTop="@dimen/motors_top_margin"
         android:text="@string/motors_positive_1"
         app:layout_constraintStart_toEndOf="@+id/x_positive_.1"
         app:layout_constraintTop_toBottomOf="@+id/x_negative_1" />
@@ -334,8 +334,8 @@
         android:id="@+id/x_positive_.1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/motors_start_margin"
+        android:layout_marginTop="@dimen/motors_top_margin"
         android:text="@string/motors_positive_01"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/x_negative_10" />
