--- a/app/src/main/res/layout/fragment_sd_card.xml
+++ b/app/src/main/res/layout/fragment_sd_card.xml
@@ -11,9 +11,9 @@
         android:id="@+id/label_file"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/sd_card_default_margin"
-        android:text="@string/print_status_file_label"
-        android:textSize="@dimen/sd_card_text_size"
+        android:paddingBottom="16dp"
+        android:text="@string/print_status_file"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@id/spinner_files"
         app:layout_constraintHorizontal_weight="1"
@@ -35,11 +35,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="@dimen/sd_card_text_size"
-        android:layout_marginStart="@dimen/zero_margin"
-        android:layout_marginTop="@dimen/zero_margin"
-        android:text="@string/sd_card_file_modified_label"
-        android:paddingBottom="@dimen/sd_card_default_margin"
+        android:textSize="20sp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:text="@string/file_modified"
+        android:paddingBottom="16dp"
         app:layout_constraintHorizontal_weight="2"
         app:layout_constraintEnd_toStartOf="@id/text_modified"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,11 +49,11 @@
         android:id="@+id/text_modified"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/sd_card_text_size"
-        android:layout_marginStart="@dimen/zero_margin"
-        android:layout_marginTop="@dimen/zero_margin"
-        android:text="@string/sd_card_modified_time_placeholder"
-        android:paddingBottom="@dimen/sd_card_default_margin"
+        android:textSize="20sp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:text="@string/modified_time_placeholder"
+        android:paddingBottom="16dp"
         app:layout_constraintHorizontal_weight="3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/label_modified"
@@ -64,11 +64,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="@dimen/sd_card_text_size"
-        android:layout_marginStart="@dimen/zero_margin"
-        android:layout_marginTop="@dimen/zero_margin"
-        android:text="@string/sd_card_file_size_label"
-        android:paddingBottom="@dimen/sd_card_default_margin"
+        android:textSize="20sp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:text="@string/file_size"
+        android:paddingBottom="16dp"
         app:layout_constraintHorizontal_weight="2"
         app:layout_constraintEnd_toStartOf="@id/text_size"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,11 +78,11 @@
         android:id="@+id/text_size"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/sd_card_text_size"
-        android:layout_marginStart="@dimen/zero_margin"
-        android:layout_marginTop="@dimen/zero_margin"
-        android:text="@string/sd_card_file_size_placeholder"
-        android:paddingBottom="@dimen/sd_card_default_margin"
+        android:textSize="20sp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:text="@string/file_size_placeholder"
+        android:paddingBottom="16dp"
         app:layout_constraintHorizontal_weight="3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/label_size"
@@ -93,11 +93,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="@dimen/sd_card_text_size"
-        android:layout_marginStart="@dimen/zero_margin"
-        android:layout_marginTop="@dimen/zero_margin"
-        android:text="@string/sd_card_estimated_time_label"
-        android:paddingBottom="@dimen/sd_card_default_margin"
+        android:textSize="20sp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:text="@string/estimated_time"
+        android:paddingBottom="16dp"
         app:layout_constraintHorizontal_weight="2"
         app:layout_constraintEnd_toStartOf="@id/text_estimated_time"
         app:layout_constraintStart_toStartOf="parent"
@@ -107,11 +107,11 @@
         android:id="@+id/text_estimated_time"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/sd_card_text_size"
-        android:layout_marginStart="@dimen/zero_margin"
-        android:layout_marginTop="@dimen/zero_margin"
-        android:text="@string/sd_card_estimated_time_placeholder"
-        android:paddingBottom="@dimen/sd_card_default_margin"
+        android:textSize="20sp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:text="@string/estimated_time_placeholder"
+        android:paddingBottom="16dp"
         app:layout_constraintHorizontal_weight="3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/label_estimated_time"
@@ -122,11 +122,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="@dimen/sd_card_text_size"
-        android:layout_marginStart="@dimen/zero_margin"
-        android:layout_marginTop="@dimen/zero_margin"
-        android:text="@string/sd_card_slicer_label"
-        android:paddingBottom="@dimen/sd_card_default_margin"
+        android:textSize="20sp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:text="@string/slicer"
+        android:paddingBottom="16dp"
         app:layout_constraintHorizontal_weight="2"
         app:layout_constraintEnd_toStartOf="@id/text_slicer"
         app:layout_constraintStart_toStartOf="parent"
@@ -136,11 +136,11 @@
         android:id="@+id/text_slicer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/sd_card_text_size"
-        android:layout_marginStart="@dimen/zero_margin"
-        android:layout_marginTop="@dimen/zero_margin"
-        android:text="@string/sd_card_slicer_name_placeholder"
-        android:paddingBottom="@dimen/sd_card_default_margin"
+        android:textSize="20sp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:text="@string/slicer_name_placeholder"
+        android:paddingBottom="16dp"
         app:layout_constraintHorizontal_weight="3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/label_slicer"
@@ -151,11 +151,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="@dimen/sd_card_text_size"
-        android:layout_marginStart="@dimen/zero_margin"
-        android:layout_marginTop="@dimen/zero_margin"
-        android:text="@string/sd_card_slicer_version_label"
-        android:paddingBottom="@dimen/sd_card_default_margin"
+        android:textSize="20sp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:text="@string/slicer_version"
+        android:paddingBottom="16dp"
         app:layout_constraintHorizontal_weight="2"
         app:layout_constraintEnd_toStartOf="@id/text_slicer_version"
         app:layout_constraintStart_toStartOf="parent"
@@ -165,11 +165,11 @@
         android:id="@+id/text_slicer_version"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/sd_card_text_size"
-        android:layout_marginStart="@dimen/zero_margin"
-        android:layout_marginTop="@dimen/zero_margin"
-        android:text="@string/sd_card_slicer_version_placeholder"
-        android:paddingBottom="@dimen/sd_card_default_margin"
+        android:textSize="20sp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:text="@string/slicer_version_placeholder"
+        android:paddingBottom="16dp"
         app:layout_constraintHorizontal_weight="3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/label_slicer_version"
@@ -179,8 +179,8 @@
         android:id="@+id/printButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/sd_card_button_start_margin"
-        android:text="@string/sd_card_print_button_label"
+        android:layout_marginStart="4dp"
+        android:text="@string/print_file"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/label_slicer_version"
